classDiagram
    %% Структура хранения: коллекции и агрегатор
    %% Открыть/отрендерить можно на https://mermaid.live

    class entityList {
        -list
        +findByCode(code) entity
        +getNewCode() int
        +getCodes() list
        +getItems() list
        +appendItem(value)
        +removeItem(value)
        +clear()
    }

    class clientList
    class routeList
    class travelList {
        -_parent_library
        +createItem(...)
        +newItem(...)
    }
    class travelList_ext {
        +createItem(..., airline, touroperator, manager)
    }
    class airlineList
    class touroperatorList
    class managerList
    class paymentList {
        +findByPackage(code) payment
    }

    class TravelCompany {
        -clientList
        -routeList
        -travelList
        +createClient/Route/Travel(...)
        +getClient/Route/Travel(code)
        +removeClient/Route/Travel(...)
        +clear()
    }

    class TravelCompany_ext {
        -airlineList
        -touroperatorList
        -managerList
        -paymentList
        +createAirline(...)
        +createTourOperator(...)
        +createManager(...)
        +createPayment(...)
        +getPaymentByPackage(code) payment
    }

    %% наследование
    entityList <|-- clientList
    entityList <|-- routeList
    entityList <|-- travelList
    entityList <|-- airlineList
    entityList <|-- touroperatorList
    entityList <|-- managerList
    entityList <|-- paymentList
    travelList <|-- travelList_ext
    TravelCompany <|-- TravelCompany_ext

    %% агрегация
    TravelCompany "1" o-- "1" clientList
    TravelCompany "1" o-- "1" routeList
    TravelCompany "1" o-- "1" travelList
    TravelCompany_ext "1" o-- "1" airlineList
    TravelCompany_ext "1" o-- "1" touroperatorList
    TravelCompany_ext "1" o-- "1" managerList
    TravelCompany_ext "1" o-- "1" paymentList
